--- a/src/Components/GetStart/GetStart.css
+++ b/src/Components/GetStart/GetStart.css
@@ -2,6 +2,7 @@
     background-color: var(--secondary);
     color: white;
     display: flex;
+width: auto;
     justify-content: center;
     align-items: center;
     flex-direction: column;
