--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,110 +1,82 @@
 .navbar {
+  /* border: 1px solid red; */
   height: 80px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  row-gap: 2rem;
-  flex-wrap: wrap;
+color: var(--textsecondaryondark);
   padding: 0 100px;
-  width: auto;
+
   background-color: var(--primary);
 }
 
-li, .lil {
-  text-decoration: none;
+  li, a {
+    text-decoration: none;
   margin-right: 24px;
-  color: #ffffff72;
+  color: inherit;
   display: inline;
   cursor: pointer;
+
+  &:hover{
+    color: var(--textondark);
+  }
+  &.active{
+  color: white;
+  }
 }
 
-li:hover, .lil:hover {
-  color: rgb(255, 255, 255);
-}
 
-ul {
-  list-style-type: none;
-  padding: 0;
-}
 
-#little {
-  font-weight: 600;
-  color: rgb(255, 255, 255);
+.nv-btn{
+  background: transparent;
+  border: none;
+  color: inherit;
   display: none;
+  visibility: hidden;
+  opacity: 0;
+  font-size: 32px;
 }
 
-#little-btn {
-  display: none;
-}
 
-.menu {
+ul{
   display: flex;
-}
-
-.menu-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  display: flex;
-  justify-content: center;
   align-items: center;
-  z-index: 1000;
 }
 
-.menu-content {
-  text-align: center;
+@media (max-width:940px) {
+.navbar{
+   padding: 0 16px;
 }
 
-.menu-content ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.menu-content li {
-  margin: 20px 0;
-  color: white;
-}
-
-.menu-content .lil {
-  color: white;
-}
-
-.close-menu {
-  margin-top: 20px;
-  background: none;
-  border: 1px solid white;
-  color: white;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-@media (max-width: 560px) {
-  .navbar {
-    padding: 0 16px;
-  }
-  .menu {
-    display: none;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-  }
-  .menu.visible {
-    display: flex;
-  }
-  #little, #little-btn {
+  .nv-btn{
+    visibility: visible;
+    opacity: 1;
     display: block;
   }
-  .menu-content ul{
-    display: flex;
-    flex-direction: column;
+  ul{
+   position: fixed;
+   top: 0;
+   left: 0;
+   height: 100%;
+   width: 100%;
+   display: flex;
+   background-color:rgb(0, 0, 0);
+   flex-direction: column;
+   gap: 2rem;
+   align-items:first center;
+   justify-content: center;
+   transition: 1s;
+   transform: translateY(-100vh);
+   z-index: 1000;
   }
+ul.responsive_nav{
+  transform: none;
+}
+ul .close{
+position: absolute;
+top: 3rem;
+right: 3em;
+z-index: 1000;
 }
 
-@media (max-width: 900px) {
-  .navbar {
-    padding: 0 16px;
-  }
 }
