--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -29,6 +29,11 @@
 }
 
 @media(max-width:800px){
+    .left{
+       display:flex;
+       flex-direction: column;
+       align-items: center;
+    }
     .footer{
         flex-direction: column;
     }
