--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -10,12 +10,21 @@ color: var(--textsecondaryondark);
   background-color: var(--primary);
 }
 
+label{
+  background-color: red;
+  padding: 4px;
+  font-size: 12px; 
+  color: white;
+  border-radius: 10px;
+}
+
   li, a {
-    text-decoration: none;
+  text-decoration: none;
   margin-right: 24px;
   color: inherit;
   display: inline;
   cursor: pointer;
+
 
   &:hover{
     color: var(--textondark);
