--- a/src/Images.css
+++ b/src/Images.css
@@ -38,7 +38,7 @@
 
 
 .i-results{
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     display: flex;
     flex-wrap: wrap;
     padding: 12px;
