--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,5 +1,6 @@
 .hero{
    /* border: 1px solid red;  */
+   margin-top: 80px;
    padding: 50px 100px;
    color: white;
    background-color: var(--primary);
