--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -4,90 +4,101 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-color: var(--textsecondaryondark);
-  padding: 0 100px;
+  color: var(--textsecondaryondark);
+  background-color: var(--navBackgroundcolor);
+  backdrop-filter: blur(10px);
+  position: fixed; /* Fix to top */
+  top: 0; /* Align to top */
+  width: 100%;
+  z-index: 1000;
+  transition: all 300ms ease-in-out;
 
-  background-color: var(--primary);
+  &:hover {
+    border-bottom: 0.5px solid gray;
+  }
 }
 
-label{
+
+/* label {
   background-color: red;
   padding: 4px;
-  font-size: 12px; 
+  font-size: 12px;
   color: white;
   border-radius: 10px;
   position: absolute;
   right: 14.8rem;
-}
+} */
 
-  li, a {
+li,
+a {
   text-decoration: none;
   margin-right: 24px;
   color: inherit;
   display: inline;
+  margin: 10px 10px;
   cursor: pointer;
 
-
-  &:hover{
+  &:hover {
     color: var(--textondark);
   }
-  &.active{
-  color: white;
+  &.active {
+    color: white;
   }
 }
 
-
-
-.nv-btn{
+.nv-btn {
   background: transparent;
   border: none;
   color: inherit;
-  display: none;
+  display: none; /* Hidden by default */
   visibility: hidden;
   opacity: 0;
   font-size: 32px;
 }
 
-
-ul{
+ul {
   display: flex;
   align-items: center;
 }
 
-@media (max-width:940px) {
-.navbar{
-   padding: 0 16px;
-}
 
-  .nv-btn{
+
+
+@media (max-width: 940px) {
+  .nv-btn {
     visibility: visible;
     opacity: 1;
-    display: block;
+    display: block; /* Show on small screens */
   }
-  ul{
-   position: fixed;
-   top: 0;
-   left: 0;
-   height: 100%;
-   width: 100%;
-   display: flex;
-   background-color:rgb(0, 0, 0);
-   flex-direction: column;
-   gap: 2rem;
-   align-items:first center;
-   justify-content: center;
-   transition: 1s;
-   transform: translateY(-100vh);
-   z-index: 1000;
-  }
-ul.responsive_nav{
-  transform: none;
-}
-ul .close{
-position: absolute;
-top: 3rem;
-right: 3em;
-z-index: 1000;
-}
 
+  ul {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    display: flex;
+    background-color: rgb(0, 0, 0);
+    flex-direction: column;
+   
+    gap: 2rem;
+    align-items: center; /* Correct alignment */
+    justify-content: center;
+    transition: transform 1s;
+    transform: translateY(-100vh); /* Initially hidden */
+    z-index: 1000;
+  }
+
+  ul.responsive_nav {
+    transform: translateY(0); /* Show the menu */
+    /* border: 1px solid green; */
+  }
+
+  ul .close {
+    position: absolute;
+    top: 0rem;
+    right: 1.3em;
+    z-index: 1000;
+    color: var(--textsecondaryondark); /* Ensure the close button is visible */
+  }
 }
