--- a/src/Gift.css
+++ b/src/Gift.css
@@ -1,18 +1,30 @@
 .g-page{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 1000px;
     padding: 0 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: black;
+    color: white;
+
+    span{
+        font-size: 50px;
+    }
+}
+
+@media (max-width:500px){
+    .g-page{
+        padding: 0 16px;
+    }
+    .g-add-img{
+        width: 100%;
+        /* border: 1px solid blue; */
+    }
 }
 
 
-.g-add-img{
-    width: 100%;
-    /* border: 1px solid blue; */
-}
 
 .aa{
     background-color: var(--secondary);
