--- a/src/Images.css
+++ b/src/Images.css
@@ -1,6 +1,6 @@
 .images-sec{
     /* border: 1px solid blue; */
-   
+    margin-top: 80px;
     background-color: black;
     color: white;
     display: flex;
