--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
 font-family: "Poppins";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
 code {
@@ -17,6 +18,7 @@ code {
 --textondark: white;
 --textsecondaryondark: rgba(255, 255, 255, 0.578);
 
+--navBackgroundcolor: rgba(0, 0, 0, 0.323);
 
 --minwidthButton: 100px
 }
