--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
+
+@font-face {
+  font-family: 'Paris2024-Variable';
+  src: url('../src/fonts/Paris2024-Variable.ttf') format('truetype'),
+    url('../src/fonts/Paris2024-Variable.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 body {
   margin: 0;
-font-family: "Poppins";
+font-family: "Paris2024-Variable";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
 }
 
 code {
-  font-family:"Poppins";
+  font-family:"Paris2024-Variable";
 }
 
 :root{
