--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@
 .Input{
     height: 40px;
     width: 60%;
+    padding: 0 10px;
     background-color: black;
     border: 1px solid gray;
     border-radius: 10px;
