--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -65,6 +65,10 @@ overflow: hidden;
     display: flex;
     flex-direction: column;
     /* border: 1px solid red; */
+    span{
+        /* border:1px solid yellow; */
+        width: 300px;
+    }
 }
 
 .search-bar{
